web & mp: fix common && web: change wrap default z-index

--- a/temps/PCWeb-Vue3/src/style/client.less
+++ b/temps/PCWeb-Vue3/src/style/client.less
@@ -46,6 +46,7 @@ a {
   overflow-x: hidden;
   pointer-events: auto;
   box-sizing: border-box;
+  z-index: 1;
   > .frame {
     position: relative;
     margin: 0 auto;
