--- a/temps/Web-Vue2/src/style/client.less
+++ b/temps/Web-Vue2/src/style/client.less
@@ -47,6 +47,7 @@ a {
   overflow-x: hidden;
   pointer-events: auto;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .U-container {
